# ccodesv1

./: .gitignore  CMakeLists.txt  README.md
config/: policy.json
src/: main.cpp
src/ast/: ast_nodes.cpp  ast_nodes.h  ast_visitor.h
src/ast/traversal/: {ASTTraversal}.hpp
src/cfg/: BasicBlock.cpp  BasicBlock.hpp  CFG.cpp  CFG.hpp  CFGBuilder.cpp  CFGBuilder.hpp  Edge.cpp  Edge.hpp
src/detectors/: DetectorManager.cpp  DetectorManager.hpp  Finding.cpp  Finding.hpp  VulnerabilityDetector.cpp  VulnerabilityDetector.hpp
src/detectors/detectors/: FormatStringInspector.cpp  FormatStringInspector.hpp  FunctionContext.cpp  FunctionContext.hpp  SecureMemTracker.cpp  SecureMemTracker.hpp  SimpleBufferDetector.cpp  SimpleBufferDetector.hpp  TaintAnalysis.hpp  TaintFlowDetector.cpp  TaintFlowDetector.hpp  UseBeforeInitDetector.cpp  UseBeforeInitDetector.hpp
src/parser/: parser.cpp  parser.h  tokenizer.cpp  tokenizer.h
src/policy/: PolicyLoader.cpp  PolicyLoader.hpp  PolicyMapper.cpp  PolicyMapper.hpp  RuleRepository.cpp  RuleRepository.hpp
src/risk/: ComplianceChecker.cpp  ComplianceChecker.hpp  RiskAssessmentEngine.cpp  RiskAssessmentEngine.hpp  RiskMetrics.hpp  RiskScoreCalculator.cpp  RiskScoreCalculator.hpp
src/semantic/: InitializationTracker.cpp  InitializationTracker.hpp  Scope.cpp  Scope.hpp  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Symbol.cpp  Symbol.hpp  SymbolTable.cpp  SymbolTable.hpp  TypeChecker.cpp  TypeChecker.hpp
src/utils/: FunctionExtractor.cpp  FunctionExtractor.hpp  SourceLocation.hpp
test/: expr_only.c  simple_decl.c  test.c  test_all_detectors.c  test_buffer.c  test_buffer_simple.c  test_cfg_complete.c  test_comment.c  test_fmt_simple.c  test_format_comprehensive.c  test_init_simple.c  test_minimal.c  test_mixed.c  test_multi_func.c  test_phase_f_simple.c  test_phase_g_complete.c  test_safe.c  test_taint.c  test_taint_comprehensive.c  test_unsafe.c  test_vuln_basic.c  test_vuln_format.c  test_vuln_integer.c  test_vuln_memory.c  with_var.c
test/unit/: test_harness.cpp  test_tokenizer.cpp
